--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,13 @@
   opacity: 70%;
 }
 
+.film-photo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
 /* 
 .logo {
   height: 6em;
