--- a/src/App.css
+++ b/src/App.css
@@ -42,12 +42,37 @@
   opacity: 70%;
 }
 
+.about-folder {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+}
+
+.film-folder {
+  position: absolute;
+  top: 70%;
+  left: 30%;
+}
+
+.proj-health-folder {
+  position: absolute;
+  top: 20%;
+  right: 30%;
+}
+
+.proj-interior-folder {
+  position: absolute;
+  top: 60%;
+  right: 10%;
+}
+
 .window-bar {
   display: flex;
   justify-content: end;
-  background-color: #CCCCCC;
-  border: 1px solid black;
+  background-color: #cccccc;  /*011E75*/
+  border-bottom: 1px solid black;
   margin-bottom: 1rem;
+  padding: 2px;
 }
 
 .window-content {
@@ -62,10 +87,56 @@
   padding-bottom: 1rem;
 }
 
-.close:hover {
+.btn-close:hover {
   opacity: 50%;
   cursor: pointer;
 }
+
+.social-icons {
+  display: flex;
+  gap: 3%;
+}
+
+.modal-style {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  /* sizing */
+  width: 50%;
+  max-height: 70vh;
+  overflow-y: auto; /* add scrollbar if content exceeds max-height */
+  
+  /* appearance */
+  color: #000000;
+  background-color: var(--mui-palette-background-paper, #ffffff); /* fallback if not using MUI theme */
+  border: 2px solid #000000;
+  
+  padding-bottom: 1rem;
+}
+
+/* for smaller screens */
+@media (max-width: 800px) {
+  .intro-text {
+    font-size: 1rem;
+    z-index: 10;
+  }
+
+  .proj-interior-folder {
+    top: 80%;
+  }
+
+  .modal-style {
+    width: 95%
+  }
+
+  .modal-text {
+    font-size: 0.8rem !important;
+  }
+
+}
+
 
 
 /* 
